crates/stef-build/tests/snapshots/compiler__compile@import-basic.stef.snap
---
source: crates/stef-build/tests/compiler.rs
expression: "use other::schema::Sample;\nuse second::submodule;"
input_file: crates/stef-parser/tests/inputs/import-basic.stef
---
#[allow(unused_imports)]
use ::stef::buf::{Decode, Encode};
use other::schema::Sample;
use second::submodule;

