crates/stef-build/tests/snapshots/compiler__compile@module_basic.stef.snap
---
source: crates/stef-build/tests/compiler.rs
description: "mod a {\n    /// Inner module\n    mod b {\n        enum Sample {\n            One @1,\n        }\n    }\n\n    struct Sample {\n        value: u32 @1,\n        inner: b::Sample @2,\n    }\n}"
input_file: crates/stef-parser/tests/inputs/module_basic.stef
---
#[allow(unused_imports)]
use ::stef::buf::{Decode, Encode, Size};
pub mod a {
    #[allow(unused_imports)]
    use ::stef::buf::{Decode, Encode, Size};
    /// Inner module
    pub mod b {
        #[allow(unused_imports)]
        use ::stef::buf::{Decode, Encode, Size};
        #[derive(Clone, Debug, PartialEq)]
        #[allow(clippy::module_name_repetitions, clippy::option_option)]
        pub enum Sample {
            One,
        }
        #[automatically_derived]
        impl ::stef::Encode for Sample {
            #[allow(
                clippy::borrow_deref_ref,
                clippy::deref_addrof,
                clippy::semicolon_if_nothing_returned,
                clippy::too_many_lines,
            )]
            fn encode(&self, w: &mut impl ::stef::BufMut) {
                match self {
                    Self::One => {
                        ::stef::buf::encode_variant_id(w, ::stef::VariantId::new(1));
                    }
                }
            }
        }
        #[automatically_derived]
        impl ::stef::Decode for Sample {
            #[allow(clippy::too_many_lines)]
            fn decode(r: &mut impl ::stef::Buf) -> ::stef::buf::Result<Self> {
                match ::stef::buf::decode_variant_id(r)?.value {
                    1 => Ok(Self::One),
                    id => Err(::stef::buf::Error::UnknownVariant(id)),
                }
            }
        }
        #[automatically_derived]
        impl ::stef::buf::Size for Sample {
            #[allow(
                clippy::borrow_deref_ref,
                clippy::deref_addrof,
                clippy::semicolon_if_nothing_returned,
                clippy::too_many_lines,
            )]
            fn size(&self) -> usize {
                match self {
                    Self::One => ::stef::buf::size_id(1),
                }
            }
        }
    }
    #[derive(Clone, Debug, PartialEq)]
    #[allow(clippy::module_name_repetitions, clippy::option_option)]
    pub struct Sample {
        pub value: u32,
        pub inner: b::Sample,
    }
    #[automatically_derived]
    impl ::stef::Encode for Sample {
        #[allow(
            clippy::borrow_deref_ref,
            clippy::deref_addrof,
            clippy::explicit_auto_deref,
            clippy::needless_borrow,
            clippy::too_many_lines,
        )]
        fn encode(&self, w: &mut impl ::stef::BufMut) {
            let Self { value, inner } = self;
            ::stef::buf::encode_field(
                w,
                ::stef::FieldId::new(1, ::stef::FieldEncoding::Varint),
                |w| {
                    ::stef::buf::encode_u32(w, *value);
                },
            );
            ::stef::buf::encode_field(
                w,
                ::stef::FieldId::new(2, ::stef::FieldEncoding::LengthPrefixed),
                |w| {
                    inner.encode(w);
                },
            );
            ::stef::buf::encode_u32(w, ::stef::buf::END_MARKER);
        }
    }
    #[automatically_derived]
    impl ::stef::Decode for Sample {
        #[allow(clippy::type_complexity, clippy::too_many_lines)]
        fn decode(r: &mut impl ::stef::Buf) -> ::stef::buf::Result<Self> {
            let mut value: Option<u32> = None;
            let mut inner: Option<b::Sample> = None;
            loop {
                let id = ::stef::buf::decode_id(r)?;
                match id.value {
                    ::stef::buf::END_MARKER => break,
                    1 => value = Some(::stef::buf::decode_u32(r)?),
                    2 => inner = Some(b::Sample::decode(r)?),
                    _ => ::stef::buf::decode_skip(r, id.encoding)?,
                }
            }
            Ok(Self {
                value: value
                    .ok_or(::stef::buf::Error::MissingField {
                        id: 1,
                        name: Some("value"),
                    })?,
                inner: inner
                    .ok_or(::stef::buf::Error::MissingField {
                        id: 2,
                        name: Some("inner"),
                    })?,
            })
        }
    }
    #[automatically_derived]
    impl ::stef::buf::Size for Sample {
        #[allow(
            clippy::borrow_deref_ref,
            clippy::deref_addrof,
            clippy::explicit_auto_deref,
            clippy::needless_borrow,
            clippy::too_many_lines,
        )]
        fn size(&self) -> usize {
            let Self { value, inner } = self;
            ::stef::buf::size_field(1, || { ::stef::buf::size_u32(*value) })
                + ::stef::buf::size_field(2, || { inner.size() })
                + ::stef::buf::size_u32(::stef::buf::END_MARKER)
        }
    }
}

