crates/stef-build/tests/snapshots/compiler__compile@struct_generics.stef.snap
---
source: crates/stef-build/tests/compiler.rs
description: "/// Generic key-value pair.\nstruct KeyValue<K, V> {\n    key: K @1,\n    value: V @2,\n}"
input_file: crates/stef-parser/tests/inputs/struct_generics.stef
---
#[allow(unused_imports)]
use ::stef::buf::{Decode, Encode, Size};
/// Generic key-value pair.
#[derive(Clone, Debug, PartialEq)]
#[allow(clippy::module_name_repetitions, clippy::option_option)]
pub struct KeyValue<K, V> {
    pub key: K,
    pub value: V,
}
#[automatically_derived]
impl<K, V> ::stef::Encode for KeyValue<K, V>
where
    K: ::stef::buf::Encode + ::stef::buf::Size,
    V: ::stef::buf::Encode + ::stef::buf::Size,
{
    #[allow(
        clippy::borrow_deref_ref,
        clippy::deref_addrof,
        clippy::explicit_auto_deref,
        clippy::needless_borrow,
        clippy::too_many_lines,
    )]
    fn encode(&self, w: &mut impl ::stef::BufMut) {
        let Self { key, value } = self;
        ::stef::buf::encode_field(
            w,
            ::stef::FieldId::new(1, ::stef::FieldEncoding::LengthPrefixed),
            |w| {
                key.encode(w);
            },
        );
        ::stef::buf::encode_field(
            w,
            ::stef::FieldId::new(2, ::stef::FieldEncoding::LengthPrefixed),
            |w| {
                value.encode(w);
            },
        );
        ::stef::buf::encode_u32(w, ::stef::buf::END_MARKER);
    }
}
#[automatically_derived]
impl<K, V> ::stef::Decode for KeyValue<K, V>
where
    K: ::std::fmt::Debug + ::stef::buf::Decode,
    V: ::std::fmt::Debug + ::stef::buf::Decode,
{
    #[allow(clippy::type_complexity, clippy::too_many_lines)]
    fn decode(r: &mut impl ::stef::Buf) -> ::stef::buf::Result<Self> {
        let mut key: Option<K> = None;
        let mut value: Option<V> = None;
        loop {
            let id = ::stef::buf::decode_id(r)?;
            match id.value {
                ::stef::buf::END_MARKER => break,
                1 => key = Some(K::decode(r)?),
                2 => value = Some(V::decode(r)?),
                _ => ::stef::buf::decode_skip(r, id.encoding)?,
            }
        }
        Ok(Self {
            key: key
                .ok_or(::stef::buf::Error::MissingField {
                    id: 1,
                    name: Some("key"),
                })?,
            value: value
                .ok_or(::stef::buf::Error::MissingField {
                    id: 2,
                    name: Some("value"),
                })?,
        })
    }
}
#[automatically_derived]
impl<K, V> ::stef::buf::Size for KeyValue<K, V>
where
    K: ::stef::buf::Size,
    V: ::stef::buf::Size,
{
    #[allow(
        clippy::borrow_deref_ref,
        clippy::deref_addrof,
        clippy::explicit_auto_deref,
        clippy::needless_borrow,
        clippy::too_many_lines,
    )]
    fn size(&self) -> usize {
        let Self { key, value } = self;
        ::stef::buf::size_field(1, || { key.size() })
            + ::stef::buf::size_field(2, || { value.size() })
            + ::stef::buf::size_u32(::stef::buf::END_MARKER)
    }
}

